# chess_console

source/: CMakeLists.txt  board.cpp  chess.cpp  chess.h  game.cpp  game.h  load_save.cpp  logic.cpp  logic.h  main.cpp  user_interface.cpp  user_interface.h  validation.cpp  validation.hpp
source/core/: CMakeLists.txt  board.cpp  board.hpp  board_positions.cpp  board_positions.hpp  board_view.cpp  board_view.hpp  chess.cpp  chess.hpp  game.cpp  game.hpp  load_save.cpp  load_save.hpp  logic.cpp  logic.hpp  pieces.hpp  user_interface.cpp  user_interface.hpp  validation.cpp  validation.hpp
source/score/: CMakeLists.txt  core_fwds.hpp  defends_attack.cpp  defends_attack.hpp  escapes_attack.cpp  escapes_attack.hpp  takes_piece.cpp  takes_piece.hpp  test_utility.cpp  test_utility.hpp  threatens_king.cpp  threatens_king.hpp  under_attack.cpp  under_attack.hpp
source/test/: CMakeLists.txt  regression_tests.cpp
